Fixing overflow again

--- a/assets/sass/layouts/_article.scss
+++ b/assets/sass/layouts/_article.scss
@@ -13,7 +13,7 @@ main {
 
     @media only screen and (max-width: $breakpoint-md) {
         flex-direction: column-reverse;
-        overflow-x: auto;
+        overflow-x: hidden;
     }
 }
 
