--- a/assets/sass/layouts/_sidebar.scss
+++ b/assets/sass/layouts/_sidebar.scss
@@ -70,6 +70,10 @@
         padding-left: 15px;
     }
 
+    &:last-child {
+        margin-bottom: 50px;
+    }
+
 }
 
 .sidebar-dropdown-item {
